--- a/src/_pagination.njk
+++ b/src/_pagination.njk
@@ -3,5 +3,5 @@ pagination:
   data: collections.pages
   size: 1
   alias: page
-permalink: "/pagination/{{ page }}/"
+permalink: "/pagination/{{ page.fileSlug }}/"
 ---
